scripts/nullaway/original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/Test.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields result (line 14), fixture (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Test (String newName) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/ResultPrinter.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static ResultPrinter instance = null;
	                             ^
    (see http://t.uber.com/nullaway )
2 errors
